--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             background-color: #fff;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            position: relative; /* Needed for absolute positioning of about button */
         }
         .section-group {
             border: 1px solid #e0e0e0;
@@ -185,16 +186,11 @@
     <div class="container">
         <h1 class="text-3xl font-bold text-center mb-6 text-gray-800">Runaki Electricity Bill Calculator</h1>
 
-        <!-- About Button -->
-        <div class="text-center mb-6">
-            <button id="about-button" class="btn btn-secondary">About</button>
-        </div>
-
         <!-- Custom About Modal -->
         <div id="about-modal" class="custom-modal">
             <div class="custom-modal-content">
                 <h3 class="font-semibold text-xl mb-3">About This Application</h3>
-                <p>This application was created from Python code by Dr. Ismael Abdulrahman, 2025.</p>
+                <p>This application was created by Dr. Ismael Abdulrahman, 2025.</p>
             </div>
             <button id="about-modal-close-btn" class="custom-modal-button">Close</button>
         </div>
@@ -278,6 +274,11 @@
                     </div>
                 </div>
             </div>
+        </div>
+        
+        <!-- About Button moved to the bottom right of the container -->
+        <div class="absolute bottom-4 right-4">
+            <button id="about-button" class="btn btn-secondary">About</button>
         </div>
     </div>
 
@@ -719,7 +720,7 @@
                 // Reset modal content to default "About" message before showing
                 document.getElementById('about-modal').querySelector('.custom-modal-content').innerHTML = `
                     <h3 class="font-semibold text-xl mb-3">About This Application</h3>
-                    <p>This application was created from Python code by Dr. Ismael Abdulrahman, 2025.</p>
+                    <p>This application was created by Dr. Ismael Abdulrahman, 2025.</p>
                 `;
                 showModal('about-modal');
             });
