--- a/index.html
+++ b/index.html
@@ -892,11 +892,11 @@
                     'reportItem': '- {{kwh}} کیلۆوات کاتژمێر لە نرخی {{rate}} د.ع/کیلۆوات کاتژمێر = {{cost}} د.ع',
                     'reportItemFixed': '- {{kwh}} کیلۆوات کاتژمێر لە نرخی {{rate}} د.ع/کیلۆوات کاتژمێر = {{cost}} د.ع (نرخی جێگیر)',
                     'reportFixedMeterCost': 'تێچووی جێگیری خوێندنەوەی میتەر:',
-                    'reportNoData': 'هیچ داتایەک نییە بۆ نیشاندان.',
-                    'reportDeviceTableTitle': 'لیستی ئامێرە چالاکەکان',
-                    'reportTableDevice': 'ئامێر',
-                    'reportTableConsumption': 'کیلۆوات کاتژمێر مانگانە',
-                    'reportTableCost': 'تێچووی مانگانە (د.ع)',
+                    'reportNoData': 'لا توجد بيانات للعرض.',
+                    'reportDeviceTableTitle': 'قائمة الأجهزة النشطة',
+                    'reportTableDevice': 'الجهاز',
+                    'reportTableConsumption': 'كيلوواط ساعة شهرياً',
+                    'reportTableCost': 'التكلفة الشهرية (د.ع)',
                 }
             };
             
